# quantdle-python

./: .gitignore  README.md  codecov.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: README.md  quantdle_examples.ipynb  quantdle_examples.py
quantdle/: __init__.py  client.py  data_downloader.py  symbols.py
scripts/: build.sh  lint.sh  test.sh
tests/: __init__.py  conftest.py  test_client.py  test_data_downloader.py  test_integration.py  test_symbols.py
