[tool.poetry]
name = "quantdle"
version = "1.0.3"
description = "Official Python client library for Quantdle"
authors = ["Quantdle <support@quantdle.com>"]
license = "Apache License 2.0"
packages = [{ include = "quantdle" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "quantdle",
    "financial-data",
    "market-data",
    "trading",
    "forex",
    "cryptocurrency",
]
readme = "README.md"
documentation = "https://github.com/quantdle/quantdle-python#readme"
homepage = "https://quantdle.com/"
repository = "https://github.com/quantdle/quantdle-python"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/quantdle/quantdle-python/issues"

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = ">=1.26.0"
certifi = "*"
python-dateutil = ">=2.8.0"
requests = ">=2.25.0"
pandas = ">=1.3.0"
tqdm = ">=4.60.0"
polars = { version = ">=0.16.0", optional = true }

[tool.poetry.extras]
polars = ["polars"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
pytest-mock = ">=3.10"
pytest-xdist = ">=3.0"                              # Parallel test execution
coverage = { extras = ["toml"], version = ">=7.0" }
black = ">=23.0"
flake8 = ">=6.0"
mypy = ">=1.0"
types-requests = ">=2.25.0"                         # Type stubs for requests
pre-commit = ">=3.0"
responses = ">=0.23.0"                              # Mock HTTP requests
freezegun = ">=1.2.0"                               # Mock datetime
factory-boy = ">=3.2.0"                             # Test data generation
safety = ">=2.0"                                    # Security vulnerability checks
bandit = ">=1.7.0"                                  # Security linting

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=quantdle", "--cov-report=term-missing", "--cov-report=html"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true
no_implicit_optional = false
exclude = ["examples/.*", "tests/.*"]
